--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -1,3 +1,3 @@
-FROM mariadb:10.4.6-bionic
+FROM mariadb:10.5.6
 MAINTAINER matthias@fam-burger.de
 ADD init.sql /docker-entrypoint-initdb.d/init.sql
